# Ozlax

./: .env.example  .gitignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  cargo-build-bpf.cmd  cargo-build-sbf.cmd  package-lock.json  package.json  tsconfig.json
app/: next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/components/: BackToTopButton.tsx  ClaimYieldButton.tsx  ConfirmModal.tsx  ConnectWallet.tsx  DepositForm.tsx  ErrorBoundary.tsx  FaqSection.tsx  FeatureCard.tsx  Layout.tsx  SettingsPanel.tsx  Skeleton.tsx  SocialIcons.tsx  TVLCounter.tsx  ThemeToggle.tsx  Toast.tsx  WithdrawForm.tsx  YieldDashboard.tsx
app/hooks/: useOzlax.ts
app/pages/: 404.tsx  _app.tsx  changelog.tsx  dashboard.tsx  index.tsx  policy.tsx  privacy.tsx  services.tsx  terms.tsx
app/styles/: globals.css
app/utils/: anchor.ts  format.ts  helius.ts  network.ts
docs/: deploy-from-clean-machine.md  devnet-deploy.md  manual-devnet-funding-and-deploy.md  post-deploy-verification.md  pre-deploy-checklist.md  windows-validator-issue.md
keeper/: bot.ts  tsconfig.json
migrations/: deploy.ts
programs/ozlax/: Cargo.toml
programs/ozlax/src/: lib.rs
scripts/: deploy-devnet-on-funded-wallet.sh  deploy-devnet.sh  deploy-token.sh  initialize-vault.ts  setup-dev-env.sh  test-full-workflow.sh  verify-deploy.ts
scripts/windows/: cargo_build_proxy.c
tests/: ozlax.ts
