[package]
name = "ozlax"
version = "0.1.0"
description = "Ozlax Solana yield aggregator MVP"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ozlax"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
